--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <nav>
-            <p>WebStudio</p>
+            <p><a href="">WebStudio</a></p>
             <ul>
-                <li>Студия</li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>
         <ul>
@@ -22,8 +22,10 @@
         </ul>
     </header>
     <main>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
         <section>
             <h2>Наши качества</h2>
         <ul>
@@ -83,11 +85,9 @@
     <footer>
         <p>WebStudio</p>
         <address>
-            <ul>
-                <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
+            г. Киев, пр-т Леси Украинки, 26 <br>
+            <a href="mailto:info@example.com">info@example.com</a> <br>
+            <a href="tel:+380991111111">+38 099 111 11 11</a> <br>
         </address>
     </footer>
 </body>
